--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
                <p class="templates-p">Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.
                </p>
                <div class="box">
-                  <img class="templates-photo photo-1" src="img/browser-left.jpg" width="770" alt="template">
-                  <img class="templates-photo photo-2" src="img/browser-center.jpg" width="770" alt="template">
-                  <img class="templates-photo photo-3" src="img/browser-right.jpg" width="770" alt="template">
+                  <img class="templates-photo photo-1" src="img/browser-left.jpg" width="770" height="400" alt="template">
+                  <img class="templates-photo photo-2" src="img/browser-center.jpg" width="770" height="482" alt="template">
+                  <img class="templates-photo photo-3" src="img/browser-right.jpg" width="770" height="400" alt="template">
                </div>
             </section>
             <section class="theme">
@@ -372,7 +372,7 @@
          </main>
          <footer class="main-footer">
             <section class="main-footer-info">
-               <section class="main-footer-info-about">
+               <section class="main-footer-info-box info-about">
                   <a class="logo-link" href="index.html">
                      <svg class="logo-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="64" height="56">
                         <path d="M52.873,55.128 L58.125,45.939 L63.377,55.128 L52.873,55.128 ZM46.303,45.172 L56.811,45.172 L51.557,54.359 L46.303,45.172 ZM51.557,34.451 L56.811,43.641 L46.303,43.641 L51.557,34.451 ZM39.738,33.686 L50.243,33.686 L44.990,42.874 L39.738,33.686 ZM44.990,22.967 L50.243,32.154 L39.738,32.154 L44.990,22.967 ZM33.168,22.202 L43.676,22.202 L38.422,31.390 L33.168,22.202 ZM38.422,11.480 L43.676,20.671 L33.168,20.671 L38.422,11.480 ZM26.600,10.713 L37.108,10.713 L31.854,19.905 L26.600,10.713 ZM31.854,-0.006 L37.108,9.184 L26.600,9.184 L31.854,-0.006 ZM20.032,20.671 L25.286,11.480 L30.540,20.671 L20.032,20.671 ZM13.465,32.154 L18.718,22.967 L23.971,32.154 L13.465,32.154 ZM6.897,43.641 L12.151,34.451 L17.404,43.641 L6.897,43.641 ZM0.331,55.128 L5.582,45.939 L10.836,55.128 L0.331,55.128 ZM17.404,45.172 L12.151,54.359 L6.897,45.172 L17.404,45.172 ZM23.971,33.686 L18.718,42.874 L13.465,33.686 L23.971,33.686 ZM30.540,22.202 L25.286,31.390 L20.032,22.202 L30.540,22.202 ZM37.108,55.128 L26.600,55.128 L31.854,45.939 L37.108,55.128 ZM43.676,45.172 L38.422,54.359 L33.168,45.172 L43.676,45.172 ZM50.243,55.128 L39.738,55.128 L44.990,45.939 L50.243,55.128 Z" />
@@ -384,9 +384,64 @@
                   </p>
                   <a class="footer-read" href="#">Read More</a>
                </section>
-               <section class="main-footer-info-posts"></section>
-               <section class="main-footer-info-twitter"></section>
-               <section class="main-footer-info-widget"></section>         
+               <section class="main-footer-info-box info-posts">
+                  <span class="main-footer-title">Recent Posts</span>
+                  <p class="main-footer-p">
+                     <time class="main-footer-date">September 08, 2015</time>
+                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit
+                  </p>
+                  <p class="main-footer-p">
+                     <time class="main-footer-date">September 08, 2015</time>
+                     Diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+                  </p>
+                  <p class="main-footer-p">
+                     <time class="main-footer-date">September 08, 2015</time>
+                     Claritas est etiam processus dynamicus, qui sequitur mutationem per seacula quarta decima
+                  </p>
+               </section>
+               <section class="main-footer-info-box info-twitter">
+                  <span class="main-footer-title">Our Twitter</span>
+                  <p class="main-footer-p">
+                     <span class="main-footer-word">@waxom</span> Cum soluta nobis eleifend option congue nihil imperdiet doming
+                     <time class="main-footer-date">3 mins ago</time>
+                  </p>
+                  <p class="main-footer-p">
+                     Mirum est <span class="main-footer-word">#envato</span> notare quam littera gothica, quam nunc putamus parum anteposuerit litterarum
+                     <time class="main-footer-date">5 hours ago</time>
+                  </p>
+                  <p class="main-footer-p">
+                     Soluta nobis option <a class="main-footer-link" href="#">bit.ly/1Hniso7</a> 
+                  </p>
+               </section>
+               <section class="main-footer-info-box info-widget">
+                  <span class="main-footer-title">Dribbble Widget</span>
+                  <a class="main-footer-widget-link" href="#">
+                     <img class="main-footer-widget-img" src="img/photo-1.jpg" alt="Widget">
+                  </a>
+                  <a class="main-footer-widget-link" href="#">
+                     <img class="main-footer-widget-img" src="img/photo-2.jpg" alt="Widget">
+                  </a>
+                  <a class="main-footer-widget-link" href="#">
+                     <img class="main-footer-widget-img" src="img/photo-3.jpg" alt="Widget">
+                  </a>
+                  <a class="main-footer-widget-link" href="#">
+                     <img class="main-footer-widget-img" src="img/photo-4.jpg" alt="Widget">
+                  </a>
+               </section>         
+            </section>
+            <section class="main-footer-bottom">
+               <span class="main-footer-bottom-txt">Copyright © 2015 Waxom
+                  <span class="main-footer-bottom-word">Waxom</span>
+               </span>
+               <a href="#" class="main-footer-bottom-link">Privacy Policy</a>
+               <a href="#" class="main-footer-bottom-link">FAQ</a>
+               <a href="#" class="main-footer-bottom-link">Support</a>
+               <span class="main-footer-bottom-txt main-footer-right">Designed by 
+                  <span class="main-footer-bottom-word">ThemeFire</span>
+               </span>
+               <span class="main-footer-bottom-txt main-footer-right">Only on 
+                  <span class="main-footer-bottom-word">Envato Market</span>
+               </span>   
             </section>
          </footer>
       </div>
