--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
                   <span class="logo-txt">Waxom</span>
                </a>
                <nav class="main-header-nav">
+                  <div class="menu-mobile">
+                     <input type="checkbox"/>
+                     <span></span>
+                     <span></span>
+                     <span></span>  
+                  </div>
                   <ul class="main-header-menu">
                      <li class="main-header-list"><a href="#" class="main-header-link">Home</a></li>
                      <li class="main-header-list"><a href="#" class="main-header-link">About Us</a></li>
